feat: implement Task 6 - Database Schema Implementation
- Add Signal SQLAlchemy model with 40+ fields from strategic concept
- Create database session management with context managers
- Add TimescaleDB migration script with hypertable setup
- Implement comprehensive database schema tests
- Update database setup script with Signal model integration
- Add .env.example configuration template
- Update Task 2 guide to use Docker-based TimescaleDB setup

Task 6 (Database Schema Implementation) from Phase A1 completed.

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,41 @@
-# Database Configuration
+# ATS Environment Configuration Example
+# Copy this file to .env and fill in your actual values
+
+# Database Configuration (Docker TimescaleDB)
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=ats_db
 DB_USER=ats_user
 DB_PASSWORD=your_secure_password_here
 
-# API Keys (add as needed)
+# Exchange API Keys
+# Binance (for CEX data)
 BINANCE_API_KEY=your_binance_api_key_here
 BINANCE_API_SECRET=your_binance_api_secret_here
+
+# Birdeye API (for DEX data)
 BIRDEYE_API_KEY=your_birdeye_api_key_here
 
-# Telegram Bot Configuration
+# Telegram Notifications (optional)
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 TELEGRAM_CHAT_ID=your_telegram_chat_id_here
 
-# Environment
+# System Configuration
+LOG_LEVEL=INFO
 ENVIRONMENT=development
+
+# Trading Configuration
+PAPER_TRADING=true
+MAX_POSITION_SIZE_USD=1000
+RISK_TOLERANCE=0.02
+
+# Algorithm Configuration
+SIGNAL_THRESHOLD=0.005
+DATA_QUALITY_THRESHOLD=0.8
+LATENCY_THRESHOLD_MS=500
+
+# Notes:
+# 1. Never commit the actual .env file to git
+# 2. Replace all placeholder values with your actual credentials
+# 3. For Docker database, use the same password you set when creating the container
+# 4. API keys should be kept secure and never shared
